[gd_scene load_steps=3 format=3 uid="uid://bkpmbnlqf5pmh"]

[ext_resource type="Script" uid="uid://deonnfpmlkp2h" path="res://script/shard_notification.gd" id="1_gh2t7"]
[ext_resource type="AudioStream" uid="uid://dxxqn4x3nvi6a" path="res://assets/audio/ui/shard.wav" id="2_admxo"]

[node name="ShardNotification" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gh2t7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="shard_texture_node" type="TextureRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="shard_name_node" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="shard_text_node" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_admxo")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
